third_party/WebKit/Source/WebCore/loader/EmptyClients.cpp
@@ -46,7 +46,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-#if ENABLE(SVG) || ENABLE(PAGE_POPUP)
 void fillWithEmptyClients(Page::PageClients& pageClients)
 {
 #if ENABLE(CONTEXT_MENUS)
@@ -65,7 +64,6 @@ void fillWithEmptyClients(Page::PageClients& pageClients)
     static InspectorClient* dummyInspectorClient = adoptPtr(new EmptyInspectorClient).leakPtr();
     pageClients.inspectorClient = dummyInspectorClient;
 }
-#endif
 
 class EmptyPopupMenu : public PopupMenu {
 public:
